# PosTracker

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Makefile  OpenEphysLib.cpp  PosTracker.cpp  PosTracker.h  PosTrackerCanvas.cpp  PosTrackerCanvas.h  PosTrackerEditor.cpp  PosTrackerEditor.h  README.md  common.h
PosTracker/: Camera.cpp  Camera.h  CameraBase.h  CameraCV.cpp  CameraCV.h  PosTracker.cpp  PosTracker.h  PosTrackerEditor.cpp  PosTrackerEditor.h  common.h
Source/: CameraBase.h  CameraCV.cpp  CameraCV.h  OpenEphysLib.cpp  PosTracker.cpp  PosTracker.h  PosTrackerEditor.cpp  PosTrackerEditor.h  common.h
StereoPos/: StereoPos.cpp  StereoPos.h  StereoPosEditor.cpp  StereoPosEditor.h
cvTracking/: Trackers.cpp  Trackers.hpp  TrackersEditor.cpp  TrackersEditor.hpp  cvTrackers.cpp  cvTrackers.hpp
libs/lib/x64/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  opencv_core452.lib  opencv_core452d.lib  opencv_highgui452d.lib  opencv_imgcodecs452.lib  opencv_imgcodecs452d.lib  opencv_imgproc452d.lib  opencv_video452.lib  opencv_video452d.lib  opencv_videoio452.lib  opencv_videoio452d.lib
libs/windows/include/opencv2/: cvconfig.h
libs/windows/x64/vc16/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_aruco452.lib  opencv_barcode452.lib  opencv_bgsegm452.lib  opencv_bioinspired452.lib  opencv_calib3d452.lib  opencv_ccalib452.lib  opencv_core452.lib  opencv_datasets452.lib  opencv_dnn452.lib  opencv_dnn_objdetect452.lib  opencv_dnn_superres452.lib  opencv_dpm452.lib  opencv_face452.lib  opencv_features2d452.lib  opencv_flann452.lib  opencv_fuzzy452.lib  opencv_gapi452.lib  opencv_hfs452.lib  opencv_highgui452.lib  opencv_img_hash452.lib  opencv_imgcodecs452.lib  opencv_imgproc452.lib  opencv_intensity_transform452.lib  opencv_line_descriptor452.lib  opencv_mcc452.lib  opencv_ml452.lib  opencv_objdetect452.lib  opencv_optflow452.lib  opencv_phase_unwrapping452.lib  opencv_photo452.lib  opencv_plot452.lib  opencv_quality452.lib  opencv_rapid452.lib  opencv_reg452.lib  opencv_rgbd452.lib  opencv_saliency452.lib  opencv_shape452.lib  (+14 more)
